fix minimum color contrast ratio thresholds on footer and talkview

--- a/frontend/packages/volto-tagung-plone-de/src/theme/components/_talkview.scss
+++ b/frontend/packages/volto-tagung-plone-de/src/theme/components/_talkview.scss
@@ -11,7 +11,8 @@
         padding: 20px;
         background-color: var(--accent-color);
         color: var(--reverse-color);
-        font-weight: 800;
+        font-size: 1.1rem;
+        font-weight: bold;
         gap: 20px;
         // box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
